# hello-shaders

./: CMakeLists.txt  README.md
00/: CMakeLists.txt
00/includes/glad/src/: glad.c
00/src/: main.cpp  shader.h
00/src/shaders/: shader.fs
01/: CMakeLists.txt
01/src/: main.cpp
01/src/shaders/: shader.fs  shader.vs
02/: CMakeLists.txt
02/src/: main.cpp
03/: CMakeLists.txt
03/includes/glad/include/glad/: glad.h
03/src/: main.cpp
03/src/shaders/: shader.vs
04/: CMakeLists.txt
04/src/: main.cpp  shader.h
05/: CMakeLists.txt
05/src/: main.cpp
06/: CMakeLists.txt
06/src/: main.cpp
06/src/shaders/: shader.fs
07/: CMakeLists.txt
07/src/: main.cpp
08/: CMakeLists.txt
08/src/: main.cpp
09/: CMakeLists.txt
09/src/: main.cpp
10/src/: main.cpp  shader.h
11/: CMakeLists.txt
11/src/: camera.h  main.cpp
12/: CMakeLists.txt
12/src/: main.cpp
12/src/shaders/: colors.fs
13/: CMakeLists.txt
13/src/: main.cpp
13/src/shaders/: colors.fs  colors.vs
14/: CMakeLists.txt
14/src/: main.cpp
14/src/shaders/: colors.fs
15/: CMakeLists.txt
15/src/: main.cpp
15/src/shaders/: colors.vs
images/: 00
src/: main.cpp
